crates/syntax/snapshots/lexer/ok/bracket_confusing.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/bracket_confusing.lua

---
[
    Token {
        kind: LocalKw,
        len: 5,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Ident,
        len: 5,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Eq,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Str,
        len: 42,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]
