crates/syntax/snapshots/lexer/ok/bracket_with_escapes.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/bracket_with_escapes.lua

---
[
    Token {
        kind: LocalKw,
        range: 0..5,
    },
    Token {
        kind: Whitespace,
        range: 5..6,
    },
    Token {
        kind: Ident,
        range: 6..7,
    },
    Token {
        kind: Whitespace,
        range: 7..8,
    },
    Token {
        kind: Eq,
        range: 8..9,
    },
    Token {
        kind: Whitespace,
        range: 9..10,
    },
    Token {
        kind: Str,
        range: 10..62,
    },
    Token {
        kind: Whitespace,
        range: 62..63,
    },
    Token {
        kind: LocalKw,
        range: 63..68,
    },
    Token {
        kind: Whitespace,
        range: 68..69,
    },
    Token {
        kind: Ident,
        range: 69..70,
    },
    Token {
        kind: Whitespace,
        range: 70..71,
    },
    Token {
        kind: Eq,
        range: 71..72,
    },
    Token {
        kind: Whitespace,
        range: 72..73,
    },
    Token {
        kind: Str,
        range: 73..98,
    },
    Token {
        kind: Whitespace,
        range: 98..99,
    },
]
