crates/syntax/snapshots/lexer/ok/comparisons.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/comparisons.lua

---
[
    Token {
        kind: Ident,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: GtEq,
        len: 2,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Number,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: LtEq,
        len: 2,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: EqEq,
        len: 2,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Gt,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Lt,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]
