crates/syntax/snapshots/lexer/ok/concat.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/concat.lua

---
[
    Token {
        kind: DoubleDot,
        len: 2,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]
