crates/syntax/snapshots/lexer/ok/delimiters.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/delimiters.lua

---
[
    Token {
        kind: LBrace,
        range: 0..1,
    },
    Token {
        kind: Ident,
        range: 1..6,
    },
    Token {
        kind: Whitespace,
        range: 6..7,
    },
    Token {
        kind: Eq,
        range: 7..8,
    },
    Token {
        kind: Whitespace,
        range: 8..9,
    },
    Token {
        kind: Str,
        range: 9..18,
    },
    Token {
        kind: RBrace,
        range: 18..19,
    },
    Token {
        kind: Whitespace,
        range: 19..20,
    },
    Token {
        kind: Ident,
        range: 20..24,
    },
    Token {
        kind: LParen,
        range: 24..25,
    },
    Token {
        kind: RParen,
        range: 25..26,
    },
    Token {
        kind: Whitespace,
        range: 26..27,
    },
    Token {
        kind: LBracket,
        range: 27..28,
    },
    Token {
        kind: RBracket,
        range: 28..29,
    },
    Token {
        kind: LBracket,
        range: 29..30,
    },
    Token {
        kind: RBracket,
        range: 30..31,
    },
    Token {
        kind: Whitespace,
        range: 31..32,
    },
]
