crates/syntax/snapshots/lexer/ok/empty.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/empty.lua

---
[]
