crates/syntax/snapshots/lexer/ok/hex_numbers.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/hex_numbers.lua

---
[
    Token {
        kind: Number,
        len: 10,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Ident,
        len: 5,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Number,
        len: 10,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]
