crates/syntax/snapshots/lexer/ok/idents.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/idents.lua

---
[
    Token {
        kind: Whitespace,
        len: 12,
    },
    Token {
        kind: Ident,
        len: 5,
    },
    Token {
        kind: Whitespace,
        len: 4,
    },
    Token {
        kind: Ident,
        len: 5,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Ident,
        len: 3,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]
