crates/syntax/snapshots/lexer/ok/math.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/ok/math.lua

---
[
    Token {
        kind: Number,
        range: 0..1,
    },
    Token {
        kind: Whitespace,
        range: 1..2,
    },
    Token {
        kind: Plus,
        range: 2..3,
    },
    Token {
        kind: Whitespace,
        range: 3..4,
    },
    Token {
        kind: Number,
        range: 4..5,
    },
    Token {
        kind: Whitespace,
        range: 5..6,
    },
    Token {
        kind: Number,
        range: 6..8,
    },
    Token {
        kind: Whitespace,
        range: 8..9,
    },
    Token {
        kind: Asterisk,
        range: 9..10,
    },
    Token {
        kind: Whitespace,
        range: 10..11,
    },
    Token {
        kind: Number,
        range: 11..12,
    },
    Token {
        kind: Whitespace,
        range: 12..13,
    },
    Token {
        kind: Number,
        range: 13..15,
    },
    Token {
        kind: Whitespace,
        range: 15..16,
    },
    Token {
        kind: Minus,
        range: 16..17,
    },
    Token {
        kind: Whitespace,
        range: 17..18,
    },
    Token {
        kind: Number,
        range: 18..20,
    },
    Token {
        kind: Whitespace,
        range: 20..21,
    },
    Token {
        kind: Number,
        range: 21..22,
    },
    Token {
        kind: Slash,
        range: 22..23,
    },
    Token {
        kind: Number,
        range: 23..24,
    },
    Token {
        kind: Whitespace,
        range: 24..25,
    },
    Token {
        kind: Number,
        range: 25..26,
    },
    Token {
        kind: Whitespace,
        range: 26..27,
    },
    Token {
        kind: Modulo,
        range: 27..28,
    },
    Token {
        kind: Whitespace,
        range: 28..29,
    },
    Token {
        kind: Number,
        range: 29..30,
    },
    Token {
        kind: Whitespace,
        range: 30..31,
    },
    Token {
        kind: Number,
        range: 31..32,
    },
    Token {
        kind: Caret,
        range: 32..33,
    },
    Token {
        kind: Number,
        range: 33..34,
    },
    Token {
        kind: Whitespace,
        range: 34..35,
    },
]
